<resources>
    <string name="app_name">mHealth</string>
    <string name="sitters">Sitters</string>
    <string name="pupils">Pupils</string>
    <string name="health_results">Results</string>
    <string name="meds_schedule">Meds</string>
    <string name="title_activity_meds">MedsActivity</string>
    <string name="title_activity_sitters">SittersActivity</string>
    <string name="title_activity_pupils">PupilsActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tasks_activity_label">Tasks</string>
    <string name="edit">Edit</string>
    <string name="long_text">Very long long text Very long long text Very long long text Very long long text Very long long text Very long long text Very long long text Very long long text Very long long text Very long long text Very long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long text Very long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long text Very long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long text Very long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long textVery long long text</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="cyclic">Cyclic</string>
    <string name="hours">hours</string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="days">days</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_active_services">Choose active services:</string>
    <string name="push_notifications">Push notifications</string>
    <string name="email_notifications">Email notifications</string>
    <string name="sms_notifications">Sms notifications</string>
    <string name="fall_monitoring">Fall monitoring</string>
    <string name="fall_detected">Fall detected!</string>
    <string name="i_didn_t_fall">I didn\'t fall</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="add_user_message">Provide email of user you want to add to your network:</string>
    <string name="user_email">User email</string>
    <string name="user_notification">Meds alert for user</string>
    <string name="channel_name">Meds alerts</string>
    <string name="channel_description">Get info about meds alerts</string>
    <string name="result_name">Sugar</string>
    <string name="results">120, 130, 140</string>
    <string name="add_measurement">Add measurement</string>
    <string name="result_label">ResultDetail</string>
    <string name="login_label">LoginActivity</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="measurements">Measurements</string>
    <string name="measurement">Measurement</string>
    <string name="sms_sent">\nSms sent!</string>
    <string name="email_sent">\nEmail sent!</string>
    <string name="sms_first_part">We detected probable fall from user</string>
    <string name="sms_second_part">Please get in contact with him as soon as possible!</string>
    <string name="sms_hour">at</string>
    <string name="results_name">Results name</string>
    <string name="medicine_name">Name of medicine</string>
    <string name="medicine_details">Details on how medicine should be taken</string>
    <string name="phone_number">Call</string>
    <string name="email">Email</string>
    <string name="manage_measurements">Manage measurements</string>
    <string name="delete">Delete</string>
</resources>
